--- a/mycss.css
+++ b/mycss.css
@@ -32,13 +32,13 @@ img { margin-right: 20px; margin-left: 20px; }
 }
 #content2 {
   float: right;
-  width: auto;
+  width: 200px;
   background-color: #CCF;
 }
 
 #sidebar {
   float: left;
-  width: auto;
+  width: 200px;
   margin-left: -200px;
   background-color: #FFA;
 }
@@ -50,4 +50,6 @@ img { margin-right: 20px; margin-left: 20px; }
   background-color: #2ba6cb;
   padding: 0 10px;
 }
+
+footer {background: gray; border-bottom-style: solid; border-left-style: solid; border-top-style: solid; border-right-style: solid; border-width: 1px;}
 
